:iphone: Fix blog bg color on mobile

--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -569,6 +569,19 @@
     }
 
     @media only screen and (max-width: 768px) {
+        position: relative;
+        top: -60px;
+        padding-top: 60px;
+        margin-bottom: -60px;
+
+        &.is-dark {
+            .title-container {
+                .title {
+                    color: #f0f0f0;
+                }
+            }
+        }
+
         .title-container {
             height: initial;
 
